--- a/web/styles.css
+++ b/web/styles.css
@@ -1,4 +1,6 @@
+/*
 @import url(https://fonts.googleapis.com/css?family=Roboto);
+*/
 
 html, body, .stage--fullscreen {
     width: 100%;
@@ -6,4 +8,17 @@ html, body, .stage--fullscreen {
     margin: 0;
     padding: 0;
     border: 0;
+
+}
+
+body {
+    background: #000;
+    justify-content: space-around;
+}
+
+.container {
+    flex: auto;
+    background: #ccc;
+    width: 300px;
+    height: 70px;
 }
