--- a/web/styles.css
+++ b/web/styles.css
@@ -14,11 +14,25 @@ html, body, .stage--fullscreen {
 body {
     background: #000;
     justify-content: space-around;
+    height: 100%;
+    width: 100%;
 }
 
 .container {
-    flex: auto;
-    background: #ccc;
-    width: 300px;
-    height: 70px;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+    position: absolute;
+    background: #888;
+
+    width: 400px;
+    height: 150px;
+}
+
+p.onload {
+    color: aqua;
+    text-align: center;
+    font-size: 18pt;
 }
