--- a/web/styles.css
+++ b/web/styles.css
@@ -43,4 +43,13 @@ p.onload {
     background: #000;
     margin: auto;
     border: #11ebff solid 1px;
+    display: flex;
+}
+
+.rect {
+    width: 100%;
+    height: 80%;
+    margin: 5px;
+    background: cyan;
+
 }
